fixed background animation on firefox

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,8 @@
 }
 html {
 	-webkit-animation: color-change-3x 4s linear infinite alternate both;
+  -moz-animation: color-change-3x 4s linear infinite alternate both;
+  -o-animation: color-change-3x 4s linear infinite alternate both;
 	animation: color-change-3x 4s linear infinite alternate both;
 	font-size: 10px;
 	width: 100%;
@@ -481,4 +483,48 @@ img {
 		border-color: transparent;
 	}
 }
-@-webkit-keyframes color-change-3x{0%{background:#8fbc8f}50%{background:#74a7c6}100%{background:#dbd7d2}}@keyframes color-change-3x{0%{background:#8fbc8f}50%{background:#74a7c6}100%{background:#dbd7d2}}
+@-webkit-keyframes color-change-3x {
+  0% {
+    background:#8fbc8f
+  }
+  50% {
+    background:#74a7c6
+  }
+  100% {
+    background:#dbd7d2
+  }
+}
+@-moz-keyframes color-change-3x {
+  0% {
+    background:#8fbc8f
+  }
+  50% {
+    background:#74a7c6
+  }
+  100% {
+    background:#dbd7d2
+  }
+}
+@-o-keyframes color-change-3x {
+  0% {
+    background:#8fbc8f
+  }
+  50% {
+    background:#74a7c6
+  }
+  100% {
+    background:#dbd7d2
+  }
+}
+@keyframes color-change-3x {
+  0% {
+    background:#8fbc8f
+  }
+  50% {
+    background:#74a7c6
+  }
+  100% {
+    background:#dbd7d2
+  }
+}
+
